--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header class="header-section">
     <div class="profile-container">
       <img
-        src="images/image.jpg"
+        src="image.jpg"
         alt="Profile Photo"
         class="profile-pic"
       />
